# TriggerPrimitiveQuickAnalysis

./: CMakeLists.txt  README.md  runADCSimpleWindow.sh  runOnlineTAGeneratorScript.sh  runTimFilterScript.sh  runTimeFilterScript.sh
app/: ADCSimpleWindowReplicator.cxx  CMakeLists.txt  OnlineTAGenerator.cxx  TPTimeCutFilter.cxx
inc/: CosmicEvent.h  Event.h  Neutrino.h  NeutrinoEvent.h  TP.h  TPAnalysisUtils.h  TPCEvents.h
srcs/: CMakeLists.txt  CosmicEvent.cxx  Event.cxx  Neutrino.cxx  NeutrinoEvent.cxx  TP.cxx  TPAnalysisUtils.cxx  TPCEvents.cxx
